# CKAngelScript

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: api-inventory.md  api-reference.yml  async.md  behavior-bridge-design.md  catalog-ballance.md  component-metadata-manifest.md  examples.md  getting-started.md  index.md  messaging.md  native-ffi.md  public-api.md  public-manager-api.md  public-native-api-v3-design.md  runtime-script-manager-v2.md  scene-interop.md  sdk-bindings.md  validation-and-troubleshooting.md
docs/naturaldocs/: Comments.txt  Languages.txt  Project.txt
include/: AngelScriptManager.h  CKAngelScript.h
src/: AngelScript.rc  AngelScriptComponent.cpp  AngelScriptEventHook.cpp  AngelScriptEventHook.h  AngelScriptLoader.cpp  AngelScriptRunner.cpp  CMakeLists.txt  Logger.cpp  Logger.h  Plugin.cpp  RefCount.h  ScriptAngelScriptGc.h  ScriptApiDiagnostics.cpp  ScriptApiDiagnostics.h  ScriptApiHandles.h  ScriptApiSelfTest.cpp  ScriptApiSupport.cpp  ScriptApiSupport.h  ScriptAsync.cpp  ScriptAsync.h  ScriptAsyncSelfTest.cpp  ScriptBehaviorBridge.cpp  ScriptBehaviorBridge.h  ScriptBridgeBB.cpp  ScriptBridgeBehavior.cpp  ScriptBridgeCommon.cpp  ScriptBridgeCommon.h  ScriptBridgeGraph.cpp  ScriptBridgeHandles.h  ScriptBridgeLayoutCache.cpp  ScriptBridgeParameterIO.cpp  ScriptBridgeParameterIO.h  ScriptBridgeParams.cpp  ScriptBridgeRegistration.cpp  ScriptBridgeRuntime.cpp  ScriptBridgeSelfTest.cpp  ScriptBridgeSnapshot.h  ScriptBridgeTasks.cpp  ScriptBridgeWatch.cpp  ScriptBuilder.cpp  (+118 more)
tests/: ScriptApiSelfTest.cpp  ScriptAsyncSelfTest.cpp  ScriptBridgeSelfTest.cpp  ScriptComponentMetadataSelfTest.cpp  ScriptDynLoadSelfTest.cpp  ScriptInfoExportSelfTest.cpp  ScriptMessageSelfTest.cpp  ScriptNativeMemorySelfTest.cpp  ScriptParameterRegistrySelfTest.cpp  ScriptRuntimeDependencySelfTest.cpp  ScriptRuntimeSelfTest.cpp  ScriptSceneSelfTest.cpp  ScriptSelfTests.h  ScriptStartupSelfTest.cpp  ScriptVxBindingSelfTest.cpp
tools/: Inject-BallanceFpsComponent.lua  Run-BallanceFpsSample.ps1  Validate-Ballance.ps1  Validate-Local.ps1  Validate-RuntimeScripts.ps1  generate_angelscript_catalog.py  generate_naturaldocs_api.py
tools/templates/runtime-script-v2/: runtime.as  script.as
